==> IOsetting/py32f0-template/Examples/PY32F0xx/HAL/I2C/Si5351A_I2C_F003_SOP16/si5351.c <==
#include "si5351.h"

uint8_t si5351_write_bulk(uint8_t regAddr, uint8_t length, uint8_t *data) {
  HAL_StatusTypeDef status = HAL_I2C_Mem_Write(hi2c, i2c_bus_addr << 1, regAddr, I2C_MEMADD_SIZE_8BIT, data, sizeof(uint8_t)*length, 500);

  return status == HAL_OK;
}

uint8_t si5351_write(uint8_t regAddr, uint8_t data) {
  HAL_StatusTypeDef status = HAL_I2C_Mem_Write(hi2c, i2c_bus_addr << 1, regAddr, I2C_MEMADD_SIZE_8BIT, &data, sizeof data, 500);
  return status == HAL_OK;
}

uint8_t si5351_read(uint8_t regAddr) {
  uint8_t reg_val = 0;

  HAL_I2C_Master_Transmit(hi2c, i2c_bus_addr << 1, &regAddr, 1, 100);

  if (HAL_I2C_Master_Receive(hi2c, i2c_bus_addr << 1, &reg_val, sizeof(uint8_t), 100) == HAL_OK) {
    return reg_val;
  }

  return 0;
}
